# the-orchestrator

./: .env.example  .gitignore  CLAUDE.md  INTERVIEW_PREP.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
docs/: ARCHITECTURE.md  EXISTING_AGENTS.md  PHASE_1_PLAN.md  PHASE_1_USAGE.md  PHASE_2_GUIDE.md  PHASE_3_GUIDE.md  PHASE_4_ARCHITECTURE.md  PHASE_4_COMMAND_CENTER.md  PHASE_4_DEPLOYMENT.md
examples/: phase1_demo.py  phase2_demo.py  phase3_demo.py  phase4_demo.py
src/: config.py  logging_config.py
src/agents/: __init__.py  base.py  context.py  pr_agent.py  research.py
src/api/: __init__.py  approval.py  approval_manager.py  server.py  terminal_ui.py
src/cli/: main.py
src/orchestrator/: __init__.py  edges.py  graph.py  graph_v2.py  hitl_integration.py  nodes.py  summarizer.py  supervisor.py
src/state/: manager.py  redis_client.py  schemas.py
src/web/: __init__.py  analytics.py  health_monitor.py  models.py  process_manager.py  server.py  task_manager.py
src/web/static/css/: style.css
src/web/static/js/: analytics.js  approvals.js  dashboard.js  health.js  settings.js
src/web/templates/: analytics.html  approvals.html  dashboard.html  health.html  history.html  settings.html
tests/: conftest.py  test_approval_system.py  test_hitl_integration.py  test_state_manager.py
tests/web/: __init__.py  test_analytics.py  test_health_monitor.py  test_process_manager.py  test_server.py
